--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   },
   "homepage": "https://github.com/steventhan/express-demo#readme",
   "dependencies": {
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "react": "^16.11.0"
+    "express-session": "^1.17.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
